kafka note end